--- a/packages/ctc-server/package.json
+++ b/packages/ctc-server/package.json
@@ -11,6 +11,8 @@
     "@oclif/command": "^1.4.36",
     "@oclif/config": "^1.6.33",
     "@oclif/plugin-help": "^2.0.5",
+    "@types/node-ipc": "^9.1.1",
+    "node-ipc": "^9.1.1",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
