--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -8,27 +8,28 @@
   },
   "bugs": "https://github.com/rhwood/ctc-cli/issues",
   "dependencies": {
-    "@oclif/command": "^1.4.36",
-    "@oclif/config": "^1.6.33",
+    "@oclif/command": "^1.5.4",
+    "@oclif/config": "^1.8.8",
     "@oclif/plugin-autocomplete": "^0.1.0",
-    "@oclif/plugin-help": "^2.0.5",
+    "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-not-found": "^1.2.2",
+    "cli-ux": "^4.9.1",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1.15.4",
-    "@oclif/test": "^1.1.0",
-    "@oclif/tslint": "^1.1.2",
-    "@types/chai": "^4.1.4",
+    "@oclif/dev-cli": "^1.19.2",
+    "@oclif/test": "^1.2.2",
+    "@oclif/tslint": "^3.1.1",
+    "@types/chai": "^4.1.6",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.5.8",
-    "chai": "^4.1.2",
+    "@types/node": "^10.11.7",
+    "chai": "^4.2.0",
     "globby": "^8.0.1",
     "mocha": "^5.2.0",
-    "nyc": "^12.0.2",
+    "nyc": "^13.1.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.1.3"
   },
   "engines": {
     "node": ">=8.0.0"
