Switch to using shrinkwrap.
This is only needed for the CLI to ensure exact versions are used; use package-lock for all libraries to allow matching ranges to be used.

--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -57,7 +57,7 @@
   },
   "repository": "rhwood/ctc-cli",
   "scripts": {
-    "postpack": "rm -f oclif.manifest.json npm-shrinkwrap.json",
+    "postpack": "rm -f oclif.manifest.json",
     "posttest": "tsc -p test --noEmit && tslint -p test -t stylish",
     "prepack": "rm -rf lib && tsc && oclif-dev manifest && oclif-dev readme && npm shrinkwrap",
     "prepare": "rm -rf lib && tsc",
