--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -14,7 +14,8 @@
     "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-not-found": "^1.2.2",
     "cli-ux": "^4.9.1",
-    "tslib": "^1.9.3"
+    "tslib": "^1.9.3",
+    "ctc-server": "^0.0.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.19.2",
