--- a/packages/ctc-server/package.json
+++ b/packages/ctc-server/package.json
@@ -12,6 +12,7 @@
     "@oclif/config": "^1.8.8",
     "@oclif/plugin-help": "^2.1.3",
     "@types/node-ipc": "^9.1.1",
+    "cli-ux": "^4.9.1",
     "node-ipc": "^9.1.1",
     "tslib": "^1.9.3"
   },
