--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@oclif/command": "^1.5.4",
     "@oclif/config": "^1.8.8",
+    "@oclif/parser": "^3.7.0",
     "@oclif/plugin-autocomplete": "^0.1.0",
     "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-not-found": "^1.2.2",
