--- a/packages/ctc-server/package.json
+++ b/packages/ctc-server/package.json
@@ -11,8 +11,10 @@
     "@oclif/command": "^1.5.4",
     "@oclif/config": "^1.8.8",
     "@oclif/plugin-help": "^2.1.3",
+    "@types/fs-extra": "^5.0.4",
     "@types/node-ipc": "^9.1.1",
     "cli-ux": "^4.9.1",
+    "fs-extra": "^7.0.0",
     "node-ipc": "^9.1.1",
     "tslib": "^1.9.3"
   },
