When running install at root level, bootstrap everything else

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lerna": "^3.11.0"
   },
   "scripts": {
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "postinstall": "lerna bootstrap"
   }
 }
