--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -16,9 +16,11 @@
     "@oclif/plugin-not-found": "^1.2.2",
     "@types/fs-extra": "^5.0.4",
     "@types/node-ipc": "^9.1.1",
+    "@types/npmlog": "^4.1.1",
     "cli-ux": "^5.1.0",
     "fs-extra": "^7.0.1",
     "node-ipc": "^9.1.1",
+    "npmlog": "^4.1.2",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
