--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -14,6 +14,7 @@
     "@oclif/plugin-autocomplete": "^0.1.0",
     "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-not-found": "^1.2.2",
+    "@oclif/plugin-plugins": "^1.7.7",
     "@types/fs-extra": "^5.0.4",
     "@types/node-ipc": "^9.1.1",
     "@types/npmlog": "^4.1.1",
@@ -58,8 +59,10 @@
     "plugins": [
       "@oclif/plugin-autocomplete",
       "@oclif/plugin-help",
-      "@oclif/plugin-not-found"
-    ]
+      "@oclif/plugin-not-found",
+      "@oclif/plugin-plugins"
+    ],
+    "scope": "rhwood"
   },
   "repository": "rhwood/ctc",
   "scripts": {
