--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -68,7 +68,7 @@
     "prepack": "rm -rf lib && tsc && oclif-dev manifest && oclif-dev readme && npm shrinkwrap",
     "prepare": "rm -rf lib && tsc",
     "test": "nyc mocha --forbid-only \"test/**/*.test.ts\"",
-    "report": "npm test && nyc report --report=html",
+    "report": "npm test && nyc report --reporter html",
     "version": "oclif-dev readme && git add README.md"
   },
   "types": "lib/index.d.ts"
