--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lerna": "^3.12.1"
   },
   "scripts": {
-    "test": "lerna run test",
-    "postinstall": "lerna bootstrap"
+    "ci-coverage": "lerna run ci-coverage",
+    "postinstall": "lerna bootstrap",
+    "test": "lerna run test"
   }
 }
