--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
 script:
-  - npm ci-coverage
+  - npm run ci-coverage
 after_script:
   - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.ctc-cli.json packages/ctc-cli/coverage/lcov.info  # Format ctc-cli coverage
   - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2                  # Sum both coverage parts into coverage/codeclimate.json
