--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -19,7 +19,6 @@
     "@types/npmlog": "^4.1.1",
     "cli-ux": "^5.1.0",
     "fs-extra": "^7.0.1",
-    "node-ipc": "^9.1.1",
     "npmlog": "^4.1.2",
     "tslib": "^1.9.3"
   },
@@ -36,7 +35,8 @@
     "nyc": "^13.3.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "wait-until": "0.0.2"
   },
   "engines": {
     "node": ">=8.0.0"
