--- a/packages/ctc-cli/tsconfig.json
+++ b/packages/ctc-cli/tsconfig.json
@@ -5,6 +5,7 @@
     "importHelpers": true,
     "module": "commonjs",
     "outDir": "./lib",
+    "resolveJsonModule": true,
     "rootDirs": [ "./src" ],
     "strict": true,
     "target": "es2017",
