--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -15,10 +15,12 @@
     "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-not-found": "^1.2.2",
     "@types/fs-extra": "^5.0.5",
+    "@types/json-socket": "^0.1.17",
     "@types/node-ipc": "^9.1.1",
     "@types/npmlog": "^4.1.1",
     "cli-ux": "^5.1.0",
     "fs-extra": "^7.0.1",
+    "json-socket": "^0.3.0",
     "npmlog": "^4.1.2",
     "tslib": "^1.9.3"
   },
