chore: change npm "report" script to "coverage"

--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -70,7 +70,7 @@
     "prepack": "rm -rf lib && tsc && oclif-dev manifest && oclif-dev readme && npm shrinkwrap",
     "prepare": "rm -rf lib && tsc",
     "test": "nyc mocha --forbid-only \"test/**/*.test.ts\"",
-    "report": "npm test && nyc report --reporter html",
+    "coverage": "npm test && nyc report --reporter html",
     "ci-coverage": "npm test && nyc report --reporter lcov",
     "version": "oclif-dev readme && git add README.md"
   },
