--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ctc": "./packages/ctc-cli/bin/run"
   },
   "devDependencies": {
-    "lerna": "^3.18.3"
+    "lerna": "3.18.3"
   },
   "scripts": {
     "ci-coverage": "lerna run ci-coverage",
