--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -8,36 +8,36 @@
   },
   "bugs": "https://github.com/rhwood/ctc/issues",
   "dependencies": {
-    "@oclif/command": "^1.5.19",
-    "@oclif/config": "^1.13.3",
-    "@oclif/parser": "^3.8.4",
-    "@oclif/plugin-autocomplete": "^0.1.4",
-    "@oclif/plugin-help": "^2.2.1",
-    "@oclif/plugin-not-found": "^1.2.3",
-    "@types/fs-extra": "^8.0.1",
-    "@types/json-socket": "^0.1.17",
-    "@types/node-ipc": "^9.1.1",
-    "@types/npmlog": "^4.1.2",
-    "cli-ux": "^5.3.3",
-    "fs-extra": "^8.1.0",
-    "json-socket": "^0.3.0",
-    "npmlog": "^4.1.2",
-    "tslib": "^1.10.0"
+    "@oclif/command": "1.5.19",
+    "@oclif/config": "1.13.3",
+    "@oclif/parser": "3.8.4",
+    "@oclif/plugin-autocomplete": "0.1.4",
+    "@oclif/plugin-help": "2.2.1",
+    "@oclif/plugin-not-found": "1.2.3",
+    "@types/fs-extra": "8.0.1",
+    "@types/json-socket": "0.1.17",
+    "@types/node-ipc": "9.1.1",
+    "@types/npmlog": "4.1.2",
+    "cli-ux": "5.3.3",
+    "fs-extra": "8.1.0",
+    "json-socket": "0.3.0",
+    "npmlog": "4.1.2",
+    "tslib": "1.10.0"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1.22.2",
-    "@oclif/test": "^1.2.5",
-    "@oclif/tslint": "^3.1.1",
-    "@types/chai": "^4.2.4",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.3",
-    "chai": "^4.2.0",
-    "globby": "^10.0.1",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.4",
+    "@oclif/dev-cli": "1.22.2",
+    "@oclif/test": "1.2.5",
+    "@oclif/tslint": "3.1.1",
+    "@types/chai": "4.2.4",
+    "@types/mocha": "5.2.7",
+    "@types/node": "12.12.3",
+    "chai": "4.2.0",
+    "globby": "10.0.1",
+    "mocha": "6.2.2",
+    "nyc": "14.1.1",
+    "ts-node": "8.4.1",
+    "tslint": "5.20.0",
+    "typescript": "3.6.4",
     "wait-until": "0.0.2"
   },
   "engines": {
