chore: replace tslint with eslint
Also lint using default rules

--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -27,16 +27,17 @@
   "devDependencies": {
     "@oclif/dev-cli": "1.22.2",
     "@oclif/test": "1.2.5",
-    "@oclif/tslint": "3.1.1",
     "@types/chai": "4.2.10",
     "@types/mocha": "7.0.2",
     "@types/node": "13.7.7",
     "chai": "4.2.0",
+    "eslint": "6.8.0",
+    "eslint-config-oclif": "^3.1.0",
+    "eslint-config-oclif-typescript": "^0.1.0",
     "globby": "11.0.0",
     "mocha": "6.2.2",
     "nyc": "15.0.0",
     "ts-node": "8.6.2",
-    "tslint": "6.0.0",
     "typescript": "3.8.3",
     "wait-until": "0.0.2"
   },
@@ -68,7 +69,8 @@
   "repository": "rhwood/ctc",
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
-    "posttest": "tsc -p test --noEmit && tslint -p test -t stylish",
+    "pretest": "tsc -p test --noEmit",
+    "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc && oclif-dev manifest && oclif-dev readme && npm shrinkwrap",
     "prepare": "rm -rf lib && tsc",
     "test": "nyc mocha --forbid-only \"test/**/*.test.ts\"",
