--- a/packages/ctc-cli/package.json
+++ b/packages/ctc-cli/package.json
@@ -8,37 +8,40 @@
   },
   "bugs": "https://github.com/rhwood/ctc/issues",
   "dependencies": {
-    "@oclif/command": "1.5.20",
-    "@oclif/config": "1.15.1",
-    "@oclif/parser": "3.8.4",
-    "@oclif/plugin-autocomplete": "0.1.5",
-    "@oclif/plugin-help": "2.2.3",
-    "@oclif/plugin-not-found": "1.2.3",
-    "@types/fs-extra": "8.1.0",
+    "@oclif/command": "1.7.0",
+    "@oclif/config": "1.16.0",
+    "@oclif/parser": "3.8.5",
+    "@oclif/plugin-autocomplete": "0.2.0",
+    "@oclif/plugin-help": "3.1.0",
+    "@oclif/plugin-not-found": "1.2.4",
+    "@oclif/plugin-plugins": "1.9.0",
+    "@types/fs-extra": "9.0.1",
     "@types/json-socket": "0.1.17",
-    "@types/node-ipc": "9.1.2",
+    "@types/node-ipc": "9.1.3",
     "@types/npmlog": "4.1.2",
-    "cli-ux": "5.4.5",
-    "fs-extra": "9.0.0",
+    "cli-ux": "5.4.9",
+    "fs-extra": "9.0.1",
     "json-socket": "0.3.0",
     "npmlog": "4.1.2",
-    "tslib": "1.11.1"
+    "tslib": "2.0.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "1.22.2",
-    "@oclif/test": "1.2.5",
-    "@types/chai": "4.2.11",
-    "@types/mocha": "7.0.2",
-    "@types/node": "13.13.1",
+    "@oclif/test": "1.2.6",
+    "@types/chai": "4.2.12",
+    "@types/mocha": "8.0.1",
+    "@types/node": "14.0.27",
     "chai": "4.2.0",
-    "eslint": "6.8.0",
-    "eslint-config-oclif": "^3.1.0",
-    "eslint-config-oclif-typescript": "^0.1.0",
-    "globby": "11.0.0",
-    "mocha": "6.2.2",
-    "nyc": "15.0.1",
-    "ts-node": "8.9.0",
-    "typescript": "3.8.3",
+    "eslint": "7.6.0",
+    "eslint-config-oclif": "3.1.0",
+    "eslint-config-oclif-typescript": "0.2.0",
+    "globby": "11.0.1",
+    "mocha": "8.1.0",
+    "nock": "13.0.3",
+    "nyc": "15.1.0",
+    "source-map-support": "0.5.19",
+    "ts-node": "8.10.2",
+    "typescript": "3.9.7",
     "wait-until": "0.0.2"
   },
   "engines": {
@@ -73,7 +76,7 @@
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc && oclif-dev manifest && oclif-dev readme && npm shrinkwrap",
     "prepare": "rm -rf lib && tsc",
-    "test": "nyc mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "nyc mocha -r ts-node/register --forbid-only \"test/**/*.test.ts\"",
     "coverage": "npm test && nyc report --reporter html",
     "ci-coverage": "npm test && nyc report --reporter lcov",
     "version": "oclif-dev readme && git add README.md"
